# chat-analyzer-ext

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
src/chat_analyzer_extension/: __init__.py  extension.py
src/chat_analyzer_extension/templates/extension/: index.html
src/chat_analyzer_skeleton/: __init__.py  skeleton.py
src/chat_analyzer_test_ext/: __init__.py  test.py
src/chat_analyzer_test_ext/templates/: test.html
