[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chat-analyzer-test-ext"
version = "0.0.1"
description = "A small example package"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.entry-points."chat_analyzer.v1.blueprints"]
inject_blueprint = "chat_analyzer_test_ext:inject_blueprint"
inject_menu = "chat_analyzer_test_ext:inject_menu"
