[project]
name = "chat-analyzer-skeleton-extension"
version = "0.0.1"
description = "A small example package"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

[project.entry-points."chat_analyzer.v1.blueprints"]
inject_blueprint = "chat_analyzer_skeleton:inject_blueprint"
inject_menu = "chat_analyzer_skeleton:inject_menu"

[build-system]
requires = [
    "setuptools >= 71.1",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"chat_analyzer_skeleton.templates.skeleton" = ["*.html"]
